# cxflow

./: .env.example  .gitignore  COPILOT_QUICKSTART.md  QUICK_REFERENCE.md  README.md  USAGE.md  cxflow.py  docker-compose.yml  test-assistant.sh
.cxflow/: events.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
cxflow_core/: README.md  __init__.py  cli.py  config.py  connectors.py  events.py  gateway.py  health.py  registry.py  requirements.txt  workflows.py
docs/: COPILOT_COOKBOOK_EXAMPLES.md  COPILOT_INSTRUCTIONS.md  COPILOT_WORKSPACE.md  COPILOT_WORKSPACE_INDEX.md  CXFLOW_ENHANCED.md  CXSPACELLM_INTEGRATION.md  ENHANCED_AUTOMATION.md  ENHANCED_MACROS.md  ENHANCED_MACROS_QUICK_REF.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  JUPYTER_BOOK.md  POWERBI_AUTOMATION.md  POWER_AUTOMATE_SYNC.md  SUPERSET_AUTOMATION.md  (+3 more)
ml/: Dockerfile  (+2 more)
superset/: README.md  __init__.py  client.py  config.py  dashboards.py  databases.py  datasets.py  embedding.py  pyproject.toml  reports.py  requirements.txt  security.py  sql_lab.py
superset/cli/: superset_cli.py
superset/docker/: .env.example  docker-compose.yml  superset_config.py
superset/php/: SupersetClient.php  SupersetFacade.php  SupersetServiceProvider.php
superset/php/Console/Commands/: SupersetDashboard.php  SupersetQuery.php  SupersetSync.php
superset/php/Jobs/: ExecuteQuery.php  ExportDashboard.php  SyncSuperset.php
superset/php/Models/: SupersetChart.php  SupersetDashboard.php  SupersetDataset.php
superset/php/Services/: SupersetEmbedHelper.php  SupersetQueryBuilder.php  SupersetWebhookNotifier.php
superset/php/config/: superset.php
superset/php/database/migrations/: 2025_01_01_000001_create_superset_dashboards_table.php  2025_01_01_000002_create_superset_charts_table.php  2025_01_01_000003_create_superset_datasets_table.php  2025_01_01_000004_create_superset_sync_history_table.php
superset/superset_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+277 files in other folders)
